8076455: IME Composition Window is displayed on incorrect position

Reviewed-by: serb, azvegint